<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JeffferyXie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="phone_show">手机 ：</string>
	<string name="login">登   陆</string>
	<string name="register">注  册</string>
	<string name="login_password">密码 :</string>
	<string name="number">账号 ：</string>
	<string name="power">权限 ：</string>
	<string name="admin">管理员</string>
	<string name="user">用户</string>
	<string name="register_name">姓名 ：</string>
	<string name="parkinginfo">停车场信息列表显示</string>
	<string name="enter_port">普通卡/VIP</string>
	<string name="exit_port">车类型</string>
	<string name="park_name">车位数</string>
	<string name="phone">单价</string>
	<string name="total">时间</string>
	<string name="park_id">ID</string>
</resources>
